# pylon-desktop

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
core/: Cargo.toml
core/src/: consts.rs  lib.rs
gui/: package.json  tsconfig.node.json
gui/src/: App.css  App.tsx  bindings.tsx  style.css
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/views/About/: About.css  About.tsx  index.tsx
gui/src/views/ActiveTransfers/: ActiveTransfers.tsx
gui/src/views/Dashboard/: Dashboard.css  Dashboard.tsx  index.tsx
gui/src/views/History/: index.tsx
gui/src/views/Settings/: Settings.tsx
public/locales/cn/: translation.json
public/locales/de/: translation.json
public/locales/en/: translation.json
public/locales/es/: translation.json
src/: App.css  App.tsx  bindings.ts  bindings.tsx  context.tsx  i18n.ts  main.tsx  style.css  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Settings.tsx
src/views/: Receive.tsx  Send.tsx  Send_CodeView.tsx  Send_GenView.tsx  Send_SelectView.tsx
src/views/About/: About.css  index.tsx
src/views/ActiveTransfers/: ActiveTransfers.css  index.tsx
src/views/Dashboard/: Dashboard.css  index.css  index.tsx
src/views/History/: History.css  index.tsx
