[package]
name = "pylon-desktop"
version = "0.0.0"
description = "A cross-platform, secure file transfer desktop application"
authors = ["pylon-apps <https://github.com/pylon-apps>"]
license = "GPL-3.0"
repository = "https://github.com/pylon-apps/pylon-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
