[package]
name = "pylon-desktop"
version = "0.0.0"
description = "Cross-platform, secure file transfer desktop application"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
edition = "2021"

[profile.release]
strip = true

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libpylon = "0.17.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
