[package]
name = "pylon_gui"
version = "0.8.0"
description = " Cross-platform, secure file transfer desktop application"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/nikhil-prabhu/pylon"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
tauri-plugin-window-state = "0.1.0"
pylon_core = { path = "../../core" }
build-time = "0.1.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
